compliance/cis/eks/restrict-secrets-as-env-vars/good-resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-plain-env
spec:
  containers:
  - name: app
    image: nginx:1.25
    env:
    - name: LOG_LEVEL
      value: info
    - name: PORT
      value: "8080"
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-volume-secret
spec:
  containers:
  - name: app
    image: nginx:1.25
  volumes:
  - name: db-creds
    secret:
      secretName: db-secret
