compliance/cis/eks/restrict-secrets-as-env-vars/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: restrict-secrets-as-env-vars
policies:
  - restrict-secrets-as-env-vars.yaml
resources:
  - good-resource.yaml
  - bad-resource.yaml
results:
  - policy: restrict-secrets-as-env-vars
    rule: restrict-secrets-as-env-vars
    resources:
    - pod-with-plain-env
    kind: Pod
    result: pass
  - policy: restrict-secrets-as-env-vars
    rule: restrict-secrets-as-env-vars
    resources:
    - pod-with-volume-secret
    kind: Pod
    result: pass
  - policy: restrict-secrets-as-env-vars
    rule: restrict-secrets-as-env-vars
    resources:
    - pod-with-secret-env
    kind: Pod
    result: fail
  - policy: restrict-secrets-as-env-vars
    rule: restrict-secrets-as-env-vars
    resources:
    - pod-with-init-secret-env
    kind: Pod
    result: fail
